[project]
name = "dht11_spi"
version = "1.0.0"
description = "Python module to use the SPI bus to read DHT11/DHT22 sensors."
authors = [{name = "Thomas Dunteman", email= "git@learningtopi.com"}]
keywords = ["dht11", "dht22", "spi"]
readme = "README.md"
requires-python =">=3.6"
classifiers = [
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers"
]
dependencies = [
    "wheel",
    "logging_handler",
    "spidev",
    "gpiod"
]

[project.urls]
"Homepage" = "https://www.learningtopi.com/python-modules-applications/python_logging_handler/"
"Bug Tracker" = "https://github.com/LearningToPi/logging_handler/issues"
"Source Code" = "https://github.com/LearningToPi/logging_handler"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"