[project]
name = "dht11_spi"
version = "1.0.5"
description = "Python module to use the SPI bus to read DHT11/DHT22 sensors."
authors = [{name = "Thomas Dunteman", email= "git@learningtopi.com"}]
keywords = ["dht11", "dht22", "spi"]
readme = "README.md"
requires-python =">=3.6"
classifiers = [
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers"
]
dependencies = [
    "wheel",
    "logging_handler",
    "spidev",
    "gpiod"
]

[project.urls]
"Homepage" = "https://www.learningtopi.com/python-modules-applications/dht11_spi/"
"Bug Tracker" = "https://github.com/LearningToPi/dht11_spi/issues"
"Source Code" = "https://github.com/LearningToPi/dht11_spi"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"